# osm-scene

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
scripts/: josm.sh
src/osm_scene/: __init__.py  _types.py  constants.py  main.py  query.py  utils.py
tests/: __init__.py  conftest.py  test_main.py  test_query.py  test_utils.py
